--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ body {
 .logo-github {
   position: absolute;
   bottom: 20px;
-  right: 100px;
+  left: 20px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -122,7 +122,7 @@ body {
 .logo {
   min-width: 45px;
   max-width: 60px;
-  height: 60px
+  height: 45px
   margin-right: 0px;
 }
 
