--- a/public/style/home.css
+++ b/public/style/home.css
@@ -14,7 +14,7 @@ body {
   display: flex;
   justify-content: center;
   color: white;
-  font-family: Arial, sans-serif;
+  font-family: "Lato", Arial, sans-serif;
 }
 
 header {
@@ -47,21 +47,27 @@ header > div > p {
 header nav .link {
   margin: 0 10px;
   padding: 5px 10px;
-  color: #aaaaaa;
+  color: #eeeeee;
   font-size: 13pt;
   text-decoration: none;
   transition: 0.2s color ease-in-out;
 }
 
 header nav .link:hover {
-  color: #dddddd;
+  color: #bbbbbb;
 }
 
 header nav .highlighted {
   padding: 8px 16px;
-  background-color: #2246ab;
+  background-color: #2d5bdb;
   border-radius: 100px;
   cursor: pointer;
+  transition: 0.2s background-color ease-in-out;
+}
+
+header nav .highlighted:hover {
+  color: #eeeeee;
+  background-color: #2447a5;
 }
 
 header #current-language-icon {
