--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -4,5 +4,14 @@
   width: 100%;
   min-height: 100%;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+#app main {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #1c2243;
 }
